db/static/css/app.css
/* Fonts
==================== */

@font-face {
    font-family: ClearSans;
    src: url('../fonts/ClearSans-Regular.eot');
    src: url('../fonts/ClearSans-Regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/ClearSans-Regular.woff') format('woff'),
        url('../fonts/ClearSans-Regular.ttf') format('truetype'),
        url('../fonts/ClearSans-Regular.svg#open_sans') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: ClearSans;
    src: url('../fonts/ClearSans-Bold.eot');
    src: url('../fonts/ClearSans-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/ClearSans-Bold.woff') format('woff'),
        url('../fonts/ClearSans-Bold.ttf') format('truetype'),
        url('../fonts/ClearSans-Bold.svg#open_sansbold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: ClearSans;
    src: url('../fonts/ClearSans-BoldItalic.eot');
    src: url('../fonts/ClearSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/ClearSans-BoldItalic.woff') format('woff'),
        url('../fonts/ClearSans-BoldItalic.ttf') format('truetype'),
        url('../fonts/ClearSans-BoldItalic.svg#open_sansbold_italic') format('svg');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: ClearSans;
    src: url('../fonts/ClearSans-Italic.eot');
    src: url('../fonts/ClearSans-Italic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/ClearSans-Italic.woff') format('woff'),
        url('../fonts/ClearSans-Italic.ttf') format('truetype'),
        url('../fonts/ClearSans-Italic.svg#open_sansitalic') format('svg');
    font-weight: normal;
    font-style: italic;
}

/* Generic
==================== */

body {
    font-size: 14px;
    line-height: 1.3;
    font-family: ClearSans;
}

.alert-debug {
    color: black;
    background-color: white;
    border-color: #d6e9c6;
}

.alert-info {
    color: #3a87ad;
    background-color: #d9edf7;
    border-color: #bce8f1;
}

.alert-success {
    color: #468847;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.alert-warning {
    color: black;
    background-color: orange;
    border-color: #d6e9c6;
}

.alert-error {
    color: #b94a48;
    background-color: #f2dede;
    border-color: #eed3d7;
}

.error {
    margin-top: 40px auto 0 auto;
    width: 500px;
    text-align: center;
}

.label-default {
    background-color: #999;
}

.img-avatar {
    border: 2px solid white;
    border-radius: 50px;
    float: left;
    margin: 0 auto;
    margin-top: -7px;
    margin-right: 5px;
}

#main-navbar {
    margin-top: 2%;
}

#navbar-logo {
    width: 80px;
}

.statistics {
    text-align: center;
    text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.77);
    margin-top: 12px;
}

.statistics > img {
    max-width: 20px;
}

.satellite-info {
    min-height: 100px;
}

.sats {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.satellite-group-item {
    margin: 20px;
    flex-basis: 20%;
    text-align: center;
}

.satellite-item {
    display: block;
}

.satellite-item .panel-heading {
    background-image: url('/static/img/sat.png');
    background-size: cover;
    height: 120px;
}

a.satellite-item:hover {
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease-out 0s;
    text-decoration: none;
}

.satellite-title {
    font-weight: bold;
    font-size: 1.2em;
    min-height: 30px;
    padding-top: 5px;
    display: inline-block;
}

.satellite-title .badge {
    margin-top: -3px;
}

.satellite-names {
    font-size: 1.1em;
    margin: 5px;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 200px;
    white-space: nowrap;
}

.satellite-names-full,
.satellite-status {
    margin-bottom: 10px;
    font-weight: normal;
    float: right;
    margin-top: 5px;
    margin-right: 6px;
}

.satellite-status {
    font-size: .9em;
}

.satellite-status[data-status='alive'] {
    background-color: #5cb85c;
}

.satellite-status[data-status='dead'] {
    background-color: #f0ad4e;
}

.satellite-status[data-status='re-entered'] {
    background-color: #d9534f;
}

.panel-default .satellite-transmitters {
    position: relative;
    margin-top: 10px;
}

#map {
    width: 100%;
    height: 250px;
    border-radius: 5px;
}

.leaflet-left {
    display: none;
}

.mapbox-improve-map {
    display: none;
}

.satellite-suggest {
    display: inline-block;
}

.satellite-img-full {
    width: 100%;
    max-height: 250px;
    border-radius: 5px;
}

.panel-transmitter {
    margin: 20px 0;
}

.panel-first {
    margin-top: 20px;
}

.suggest-transmitter {
    margin-top: -6px;
}

.suggestions-counter {
    display: inline-block;
    font-size: 0.9em;
}

.label-transmitter-suggestions {
    margin-right: 10px;
    color: white;
}

.transmitter-element {
    margin: 10px;
}

.transmitter-element-suggest {
    margin-bottom: 10px;
}

.info {
    margin-top: 30px;
    margin-bottom: 30px;
}

.text {
    max-width: 900px;
}

.faq > li {
    margin-top: 20px;
}

footer {
    margin-bottom: 10px;
}

.stage-notice {
    background-color: #d74545;
    color: white;
    padding: 5px;
    text-align: center;
    font-size: 0.9em;
    z-index: 20;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
}

.stage-notice a {
    color: #ffff00;
}

@media screen and (max-width: 768px) {

    #map {
        margin-top: 10px;
    }

    .satellite-img-full {
        max-width: 300px;
    }
}

/* Statistics page
==================== */

.stats {
    padding-top: 20px;
    padding-bottom: 20px;
}

.stats-hud {
    padding: 15px;
    text-align: center;
}

.stats-hud-num {
    display: block;
    font-size: 2em;
    font-weight: bold;
}

/* Telemetry D3 visualisation
============================= */

.chart text {
    color: #333;
    font-size: 12px;
}

svg.chart {
    margin: 10px 50px;
}

#telemetry {
    display: none;
}

#telemetry-descriptors {
    padding: 0;
}

.telemetry-key {
    cursor: pointer;
}

.circle {
    fill: #286090;
    cursor: pointer;
}

.chart-tooltip {
    position: absolute;
    background: #286090;
    color: #fff;
    font-family: ClearSans;
    font-size: 12px;
    text-align: center;
    padding: 5px 5px 6px 5px;
    border: 0;
    border-radius: 3px;
}

.tick line, .domain {
    fill: none;
    stroke: #ddd;
}

.line {
    fill: none;
    stroke: #286090;
    stroke-width: 2;
}

/* Telemetry Datepicker */

.datepicker {
    border-radius: 3px;
    padding-bottom: 25px;
}

.datepicker input {
    font-family: ClearSans;
    font-size: 13px;
    padding: 5px 10px;
    border: none;
    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
    border-bottom-right-radius: 3px;
    border-top-right-radius: 3px;
    cursor: pointer;
}

.datepicker .input-group-addon {
    background: #777;
    color: #fff;
    border: none;
}

.daterangepicker {
    font-size: 13px;
}

